AE: Add an option to change the device hostname
This adds an option to modify the device hostname used
in ip resolution. This is useful when connecting to the
android device in a dynamic dhcp environment.

http://imgur.com/a/Di7HH

Brought up from MM for AICP:
https://github.com/AICP/packages_apps_Settings/commit/3c2b9a6f3a7e438e8905428e84d8352b77e2c4f0

Change-Id: Ibc145b74036617248d4f33c6866cc9c8a8cc8974

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -443,4 +443,7 @@
     <string name="lock_screen_hide_ampm_summary_on">AM/PM hidden</string>
     <string name="lock_screen_hide_ampm_summary_off">AM/PM shown</string>
 
+    <!-- Hostname setting -->
+    <string name="device_hostname">Device hostname</string>
+
 </resources>
