Disable Immersive Messages
Based off Xposed module by GermainZ
https://github.com/GermainZ/ImmersiveModeDontPanic

- Ported to M since Google decided to move shit around

Change-Id: Ie5559d8bb50374b3a13afb6efd91fdfb9a77d179

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -557,4 +557,8 @@
     <string name="battery_low_notif_title">Low battery notification</string>
     <string name="battery_low_notif_summary">Show low battery notification when enabled</string>
 
+    <!-- Disabling immersive mode messages -->
+    <string name="disable_immersive_message_title">Disable Immersive Mode Messages</string>
+    <string name="disable_immersive_message_summary">This will hide all Immersive Mode Messages</string>
+
 </resources>
