--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -29,9 +29,6 @@
     <string name="aicp_gerrit_title">Gerrit</string>
     <string name="send_mail_intent">Send mail...</string>
 
-    <string name="fuck_amount_0">ZERO</string>
-    <string name="fuck_amount_1">ONE</string>
-    <string name="fuck_amount_world">FU WORLD!!!</string>
     <string name="setonboot">Set on boot</string>
     <string name="selinuxswitch">Selinux switch</string>
 
@@ -39,4 +36,8 @@
     <string name="changelog_title">Changelog</string>
     <string name="changelog_title_summary">View recent changes in ROM</string>
     <string name="changelog_error">Unable to load changelog</string>
+
+    <!-- Toast Icons -->
+    <string name="toast_icon_title">Toast icon</string>
+    <string name="toast_icon_summary">Display the app icon corresponding with the toast</string>
 </resources>
