--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -29,8 +29,7 @@
     <string name="aicp_gerrit_title">Gerrit</string>
     <string name="send_mail_intent">Send mail...</string>
 
-    <string name="setonboot">Set on boot</string>
-    <string name="selinuxswitch">Selinux switch</string>
+    <string name="nothing_title">Nothing to see here yet, move along</string>
 
     <!-- Change Log -->
     <string name="changelog_title">Changelog</string>
