RecentSettings: recents panel clear all button tweaks
* Show or hide recents button
* Place the button in top left, center, right or bottom left, center, right

AICPfy:
Add recents_panel_layout.xml for the first time now

Change-Id: Ic768c3eaba47e0bbb26429fcc5de4449664add7b

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -22,7 +22,6 @@
     <string name="display_animations_title">Display and animations</string>
     <string name="headsup_title">Heads up notifications</string>
     <string name="notificaitons_title">Notification drawer</string>
-    <string name="recents_panel_title">Recents panel</string>
     <string name="statubar_title">Status bar</string>
     <string name="toast_test_switch_title">Toast test switch</string>
     <string name="aicp_downloads_title">Downloads</string>
@@ -30,6 +29,18 @@
     <string name="send_mail_intent">Send mail...</string>
 
     <string name="nothing_title">Nothing to see here yet, move along</string>
+
+    <!-- Recents panel -->
+    <string name="recents_panel_title">Recents panel</string>
+    <string name="show_clear_all_recents_button_title">Clear all button</string>
+    <string name="show_clear_all_recents_button_summary">Show clear all button</string>
+    <string name="recents_clear_all_location_title">Clear all location</string>
+    <string name="recents_clear_all_location_top_right">Top right</string>
+    <string name="recents_clear_all_location_top_left">Top left</string>
+    <string name="recents_clear_all_location_top_center">Top center</string>
+    <string name="recents_clear_all_location_bottom_right">Bottom right</string>
+    <string name="recents_clear_all_location_bottom_left">Bottom left</string>
+    <string name="recents_clear_all_location_bottom_center">Bottom center</string>
 
     <!-- Change Log -->
     <string name="changelog_title">Changelog</string>
