Allow disabling of FC dialogs [2/2]
Change-Id: I2d076bcfbdc8373b021a2a1e2804e2f625f56735

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -73,4 +73,8 @@
     <string name="disable_immersive_message_title">Disable Immersive Mode Messages</string>
     <string name="disable_immersive_message_summary">This will hide all Immersive Mode Messages</string>
 
+    <!-- Disabling FC notifications -->
+    <string name="disable_fc_notifications_title">Disable FC Notifications</string>
+    <string name="disable_fc_notifications_summary">This will hide all force close notificaitons</string>
+
 </resources>
