AicpExtras: fix typo in string resource
Change-Id: I0e1170189c6b8bc53b1a67addf4d01dac0de583b

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,7 +13,7 @@
     <string name="various_shit_title">Various shit</string>
     <string name="about_title">About</string>
     <string name="other_title">Other</string>
-    <string name="g_community">G+ comunity</string>
+    <string name="g_community">G+ community</string>
     <string name="ui_title">UI</string>
     <string name="builtin_title">BUILT-IN</string>
     <string name="addons_title">ADDONS</string>
