--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -112,4 +112,9 @@
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
 
+    <!-- Superuser indicator on status bar -->
+    <string name="su_indicator">Superuser indicator</string>
+    <string name="su_indicator_summary_on">Superuser indicator is visible when a session is active</string>
+    <string name="su_indicator_summary_off">Toggle to show superuser indicator when a session is active</string>
+
 </resources>
