Traffic FAB reset fixes
Fab hide and seek game:
- Previous patch was merged before my +1 so ...
- FAB was out of bounds :D
- Add rotation animation on FAB click

Change-Id: I17cde362c8144b321af7aeb88825ac0c447e3e77

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -111,6 +111,7 @@
     <string name="network_traffic_color_reset_message">Reset network traffic color to default?</string>
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
+    <string name="resetting_default">Resetting to default</string>
 
     <!-- Superuser indicator on status bar -->
     <string name="su_indicator">Superuser indicator</string>
