MediaScanner behavior on boot [3/3]
Change-Id: I6e0af70894207e281e4e3838411928b077fc26a7

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -887,4 +887,9 @@
     <string name="qs_stroke_thickness_title">QS shade stroke thickness</string>
     <string name="qs_corner_radius_title">QS shade corner radius</string>
 
+    <!-- MediaScanner behavior on boot -->
+    <string name="media_scanner_on_boot_title">MediaScanner behavior on boot</string>
+    <string name="media_scanner_on_boot_enabled">Scan media</string>
+    <string name="media_scanner_on_boot_ask">Ask to scan (notification)</string>
+    <string name="media_scanner_on_boot_disabled">Do not scan media</string>
 </resources>
