--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -528,4 +528,10 @@
     <!-- Battery Saver easy toggle -->
     <string name="qs_battery_easy_toggle_title">Battery tile easy toggle</string>
     <string name="qs_battery_easy_toggle_summary">Makes it so one click will turn Battery Saver on or off instead of taking you to settings</string>
+
+    <!-- MediaScanner behavior on boot -->
+    <string name="media_scanner_on_boot_title">MediaScanner behavior on boot</string>
+    <string name="media_scanner_on_boot_enabled">Scan media</string>
+    <string name="media_scanner_on_boot_ask">Ask to scan (notification)</string>
+    <string name="media_scanner_on_boot_disabled">Do not scan media</string>
 </resources>
