--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -89,6 +89,7 @@
 
     <!-- Network traffic -->
     <string name="traffic_category">Traffic Indicators</string>
+    <string name="traffic_title">Traffic</string>
     <string name="network_traffic_title">Network traffic</string>
     <string name="show_network_traffic_state">Status bar traffic monitor</string>
     <string name="show_network_traffic_unit">Display unit</string>
@@ -111,6 +112,7 @@
     <string name="network_traffic_color_reset_message">Reset network traffic color to default?</string>
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
+    <string name="resetting_default">Resetting to default</string>
 
     <!-- Superuser indicator on status bar -->
     <string name="su_indicator">Superuser indicator</string>
