--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -30,6 +30,10 @@
 
     <string name="nothing_title">Nothing to see here yet, move along</string>
 
+    <!-- Permissions -->
+    <string name="storage_permission_granted">Permission Granted, Now you can write to storage.</string>
+    <string name="storage_permission_not_granted">Permission Denied, You cannot write to storage.</string>
+
     <!-- Recents panel -->
     <string name="recents_panel_title">Recents panel</string>
     <string name="show_clear_all_recents_button_title">Clear all button</string>
