Settings: Fix ChamOS Seekbar attributes
* Update layout to match lollipop's seekbar
* Fix the minimum settings instead of getting 0 (http://imgur.com/MpNqv7o)
* Add a default value settings (http://imgur.com/EDLSb5Y, http://imgur.com/HE6tiyU)

Change-Id: I882bd683e3796e6edb37e80f68f60ebf5c781874
Signed-off-by: Lokesh Chamane <lokesh.chamane@pac-rom.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -117,6 +117,7 @@
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
     <string name="resetting_default">Color set to default</string>
+    <string name="default_string">Default</string>
 
     <!-- Superuser indicator on status bar -->
     <string name="su_indicator">Superuser indicator</string>
