Full screen recents [2/2]
Change-Id: I9add4c9a41106b7103bd95b3c85619a9c2f7ad81

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -250,4 +250,9 @@
     <string name="status_bar_weather_font_medium">Medium</string>
     <string name="status_bar_weather_font_medium_italic">Medium Italic</string>
 
+    <!-- Recents Fullscreen -->
+    <string name="recents_show_fullscreen">Recents in fullscreen</string>
+    <string name="recents_fullscreen_summary_enabled">Recents in fullscreen is enabled</string>
+    <string name="recents_fullscreen_summary_disabled">Recents in fullscreen is disabled</string>
+
 </resources>
