Lockscreen weather options [2/2]
Adapted for DU with a lot of changes to include

- Created switch for extended statusbar weather
- Mapped LockClock settings because creating a widget to just to this is stupid
- Made use of what we had and removed redundant crap
- Checkboxes are ugly, who's idea was that? Also "weather informations" hahaha
- Added dependencies because it makes sense
- Cleaned up the code some what

AICPfy:
- Make it work with AicpExtras
- Remove some checks that aren't needed, we have statusbar weather
  in another place, at least for now
- Add main lockscreen weather switch

Change-Id: I186413598dd643ba2d7c79c248e75b2f39dfc658

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -255,4 +255,33 @@
     <string name="recents_fullscreen_summary_enabled">Recents in fullscreen is enabled</string>
     <string name="recents_fullscreen_summary_disabled">Recents in fullscreen is disabled</string>
 
+    <!-- Weather settings -->
+    <string name="weahter_lockscreen_category">Lock screen weather options</string>
+    <string name="weather_settings_title">LockClock settings</string>
+    <string name="weather_settings_summary">Configure location for weather widget and other settings</string>
+    <string name="weather_lockscreen_show_title">Lock screen weather</string>
+    <string name="weather_lockscreen_show_summary">Show weather on lock screen</string>
+    <string name="weather_show_weather_title">Show weather options</string>
+    <string name="weather_show_weather_summary">Enable to show weather options that go along with LockClock</string>
+    <string name="status_bar_show_weather_title">Extended statusbar weather</string>
+    <string name="status_bar_show_weather_summary">Show basic weather in the extended statusbar area</string>
+    <string name="weather_show_location_title">Show location</string>
+    <string name="weather_show_location_summary">Enable to show the location</string>
+    <string name="weather_show_timestamp_title">Show timestamp</string>
+    <string name="weather_show_timestamp_summary">Enable to show the timestamp</string>
+    <string name="weather_condition_icon_title">Condition icon</string>
+    <string name="weather_condition_icon_dlg_title">Pick an icon for displaying the weather condition</string>
+    <string name="weather_condition_icon_monochrome_title">Monochrome</string>
+    <string name="weather_condition_icon_colored_title">Colored</string>
+    <string name="weather_condition_icon_vclouds_title">VClouds</string>
+    <string name="weather_colorize_all_icons_title">Colorize all icons</string>
+    <string name="weather_colorize_all_icons_summary">Enable to colorize all icons, disable to colorize only the monochrome icons</string>
+    <string name="colors_title">Colors</string>
+    <string name="icons_title">Icons</string>
+    <string name="text_title">Text</string>
+    <string name="reset">Reset</string>
+    <string name="reset_lockscreen_weather">OK</string>
+    <string name="reset_values_message">Reset values?</string>
+    <string name="weather_reset_title">Reset weather values</string>
+
 </resources>
