Forward Port: Add Camera sound toggle [2/3]
Port from PureNexus:
* https://github.com/PureNexusProject/android_packages_apps_PureSettings/commit/504b48a975ea063bea826466defe1206ad6df3cb

PureNexus edits:
* killed the dialog popup i come from touchwiz where we kill all the popups lol

Change-Id: I9e664272b18d3293a027133eb4c80868cf21ec06

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -716,6 +716,10 @@
     <string name="recents_show_searchbar">Show search bar in recents menu</string>
     <string name="keywords_recents_show_searchbar">recent recents disable enable show hide search bar searchbar</string>
 
+    <!-- Camera shutter sound -->
+    <string name="camera_sounds_title">Camera shutter sound</string>
+    <string name="camera_sounds_summary">Disabling may not work on 3rd party camera apps and in HDR+ mode</string>
+
     <!-- Screenshot sound -->
     <string name="screenshot_sound_title">Screenshot sound</string>
     <string name="screenshot_sound_summary">Plays sound effect when screenshot is taken</string>
