AicpExtras: Lockscreen blur & see through (2/2)
AICPfy

Change-Id: I226b0ca155e76a803730c1f7464300eb1f46b312

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -284,4 +284,9 @@
     <string name="reset_values_message">Reset values?</string>
     <string name="weather_reset_title">Reset weather values</string>
 
+   <!-- Lockscreen see through -->
+    <string name="lockscreen_see_through_title">Lockscreen blur</string>
+    <string name="lockscreen_see_through_summary">Blurs and displays the content behind your lockscreen.</string>
+    <string name="lockscreen_blur_radius">Blur effect intensity</string>
+
 </resources>
