Add new Lockscreen nav drawer item and clean up a little
Change-Id: I0e9bd23848797525de0d9f25f6d18a5e550420a8

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="headsup_title">Heads up notifications</string>
     <string name="notificaitons_title">Notification drawer</string>
     <string name="statubar_title">Status bar</string>
-    <string name="toast_test_switch_title">Toast test switch</string>
+    <string name="lockscreen_title">Lock screen</string>
     <string name="aicp_downloads_title">Downloads</string>
     <string name="aicp_gerrit_title">Gerrit</string>
     <string name="send_mail_intent">Send mail...</string>
