--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -284,9 +284,13 @@
     <string name="reset_values_message">Reset values?</string>
     <string name="weather_reset_title">Reset weather values</string>
 
-   <!-- Lockscreen see through -->
+    <!-- Lockscreen see through -->
     <string name="lockscreen_see_through_title">Lockscreen blur</string>
     <string name="lockscreen_see_through_summary">Blurs and displays the content behind your lockscreen.</string>
     <string name="lockscreen_blur_radius">Blur effect intensity</string>
+
+    <!-- Recents shake -->
+    <string name="shake_clear_recents">Shake to clear</string>
+    <string name="shake_clear_recents_summary">Clear recents by shaking your phone</string>
 
 </resources>
