Add CMSettings preference files from Settings app
Giving authorship to Adnan
Had to use magic to get it compiled

Change-Id: Iea38168a5f112634275ea351e4db8d7021dc2c9f

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -30,6 +30,10 @@
 
     <string name="nothing_title">Nothing to see here yet, move along</string>
 
+    <!-- Switch On/Off  -->
+    <string name="switch_on_text">On</string>
+    <string name="switch_off_text">Off</string>
+
     <!-- Permissions -->
     <string name="storage_permission_granted">Permission Granted, Now you can write to storage.</string>
     <string name="storage_permission_not_granted">Permission Denied, You cannot write to storage.</string>
@@ -284,7 +288,7 @@
     <string name="reset_values_message">Reset values?</string>
     <string name="weather_reset_title">Reset weather values</string>
 
-   <!-- Lockscreen see through -->
+    <!-- Lockscreen see through -->
     <string name="lockscreen_see_through_title">Lockscreen blur</string>
     <string name="lockscreen_see_through_summary">Blurs and displays the content behind your lockscreen.</string>
     <string name="lockscreen_blur_radius">Blur effect intensity</string>
