AE: Notification weather switch part
FWB part is already in

Change-Id: Ifc140e77cbc3cc579ff81a62f3f89d72daf30aea

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -293,4 +293,8 @@
     <string name="lockscreen_see_through_summary">Blurs and displays the content behind your lockscreen.</string>
     <string name="lockscreen_blur_radius">Blur effect intensity</string>
 
+    <!-- Notificatio drawer weather -->
+    <string name="notif_drawer_weather_title">Weather</string>
+    <string name="notif_drawer_weather_summary">Toggle notification drawer weather info</string>
+
 </resources>
