AE: Hide power menu on lockscreen [2/2]
Change-Id: I71183e47e9504470816f2e9209d650550f7d6b78

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -297,4 +297,8 @@
     <string name="notif_drawer_weather_title">Weather</string>
     <string name="notif_drawer_weather_summary">Toggle notification drawer weather info</string>
 
+    <!-- Power menu on lock screen -->
+    <string name="powermenu_lockscreen_title">Power menu on lock screen</string>
+    <string name="powermenu_lockscreen_summary">Show power menu on the lock screen</string>
+
 </resources>
