Keyguard Wallpaper Changer [2/2]
** DU changes **
- Added toast to reset back to default, for a better experience

AICPfy
- Bring it to AicpExtras
- Don't make new LockscreenWallpaper fragment,
include ii in LockscreenFragment

Change-Id: I30b50bfd6b0d9519f84340ed811e2267ab681fa3

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -359,4 +359,11 @@
     <string name="trigger_bottom_title">Trigger height</string>
     <string name="trigger_bottom_summary">Adjust the height of the trigger area</string>
 
+   <!-- Lock screen wallpaper -->
+   <string name="lockscreen_category_title">Wallpaper</string>
+   <string name="lockscreen_wallpaper_title">Lockscreen Wallpaper</string>
+   <string name="lockscreen_wallpaper_set_title">Set new wallpaper</string>
+   <string name="lockscreen_wallpaper_clear_title">Return to default</string>
+   <string name="reset_lockscreen_wallpaper">Lockscreen wallpaper set back to default</string>
+
 </resources>
