Lockscreen -> Lock screen
Change-Id: I2e96bec21fcc4906b8a2174c0896c5abf822baf0

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -289,8 +289,8 @@
     <string name="weather_reset_title">Reset weather values</string>
 
     <!-- Lockscreen see through -->
-    <string name="lockscreen_see_through_title">Lockscreen blur</string>
-    <string name="lockscreen_see_through_summary">Blurs and displays the content behind your lockscreen.</string>
+    <string name="lockscreen_see_through_title">Lock screen blur</string>
+    <string name="lockscreen_see_through_summary">Blurs and displays the content behind your lock screen.</string>
     <string name="lockscreen_blur_radius">Blur effect intensity</string>
 
     <!-- Notificatio drawer weather -->
@@ -361,9 +361,10 @@
 
    <!-- Lock screen wallpaper -->
    <string name="lockscreen_category_title">Wallpaper</string>
-   <string name="lockscreen_wallpaper_title">Lockscreen Wallpaper</string>
+   <string name="lockscreen_wallpaper_title">Lock screen Wallpaper</string>
    <string name="lockscreen_wallpaper_set_title">Set new wallpaper</string>
+   <string name="lockscreen_wallpaper_set_summary">Reboot is needed</string>
    <string name="lockscreen_wallpaper_clear_title">Return to default</string>
-   <string name="reset_lockscreen_wallpaper">Lockscreen wallpaper set back to default</string>
+   <string name="reset_lockscreen_wallpaper">Lock screen wallpaper set back to default</string>
 
 </resources>
