--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="welcome_title">WELCOME\nto the real world!!!</string>
     <string name="logo">logo</string>
     <string name="display_animations_title">Display and animations</string>
-    <string name="headsup_title">Heads up notifications</string>
+    <string name="multishit_title">MultiShit</string>
     <string name="notificaitons_title">Notification drawer</string>
     <string name="statubar_title">Status bar</string>
     <string name="lockscreen_title">Lock screen</string>
