--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -27,6 +27,9 @@
     <string name="aicp_downloads_title">Downloads</string>
     <string name="aicp_gerrit_title">Gerrit</string>
     <string name="send_mail_intent">Send mail...</string>
+    <string name="hidden_anim_activity_title">Yoga time!!!</string>
+    <string name="hidden_anim_more_title">MORE?</string>
+    <string name="hidden_anim_more_nice">NICE</string>
 
     <string name="nothing_title">Nothing to see here yet, move along</string>
 
