AE: Add option for new Poly HD custom contextual headers (2/2)
Change-Id: Ieb2d10e146338ee5228ce6725a5349a140c2a591

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -134,6 +134,8 @@
     <!--Time Contexual Header -->
     <string name="status_bar_custom_header_title">Time Contextual Header</string>
     <string name="status_bar_custom_header_summary">Enable notification panel header image</string>
+    <string name="status_bar_custom_header_default_title">Use Poly HD images</string>
+    <string name="status_bar_custom_header_default_summary">Enable for Polygraphic HD images. Disable for original images.</string>
 
     <!-- QuickSettings haptic feedback -->
     <string name="quick_settings_vibrate_title">Vibrate on touch</string>
