AE: QS quick pulldown settings part
FWN part is already in and CM haven't
brought back settings part for it, so
here it is

Change-Id: Ied39dbfff493cc97f5ebe3563da0480391207b21

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -381,4 +381,8 @@
     <string name="omniswitch_first_time_title">Information</string>
     <string name="omniswitch_first_time_message">Make sure you have enabled OmniSwitch. You can do this by using \"Settings\" below</string>
 
+    <!-- QuickSettings quick pulldown -->
+    <string name="status_bar_quick_qs_pulldown_title">Quick QS pulldown</string>
+    <string name="status_bar_quick_qs_pulldown_summary">Whether to allow one finger quick settings expansion on the right side of the statusbar.</string>
+
 </resources>
