--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -385,4 +385,8 @@
     <string name="double_tap_sleep_nav_bar_title">DT2S on Navbar</string>
     <string name="double_tap_sleep_nav_bar_summary">Double tap navigation bar to put the device to sleep</string>
 
+    <!-- Double tap to sleep on lockscreen -->
+    <string name="double_tap_sleep_anywhere_title">DT2S on Lockscreen</string>
+    <string name="double_tap_sleep_anywhere_summary">Double tap lockscreen to put the device to sleep</string>
+
 </resources>
