Add link to SystemUI Tuner
Change-Id: If3887a6071de4eccf14258c6e7b09231e38a0e1c

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -24,6 +24,7 @@
     <string name="notificaitons_title">Notification drawer</string>
     <string name="statubar_title">Status bar</string>
     <string name="lockscreen_title">Lock screen</string>
+    <string name="systemui_tuner_title">SystemUI Tuner</string>
     <string name="aicp_downloads_title">Downloads</string>
     <string name="aicp_gerrit_title">Gerrit</string>
     <string name="send_mail_intent">Send mail...</string>
