Add link to SystemUI Tuner
Dialog will appear only on first run with more info
about SystemUI tuner
Using getSharedPreferences for this, there is probably
more nicer way of coding this, but this works fine

Change-Id: If3887a6071de4eccf14258c6e7b09231e38a0e1c

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -24,12 +24,17 @@
     <string name="notificaitons_title">Notification drawer</string>
     <string name="statubar_title">Status bar</string>
     <string name="lockscreen_title">Lock screen</string>
+    <string name="systemui_tuner_title">SystemUI Tuner</string>
+    <string name="systemui_tuner_summary">Marshmallow take on SystemUI tuning</string>
+    <string name="systemui_tuner_dilog_title">Attention</string>
+    <string name="systemui_tuner_dilog_warning">Tuner offers limited SystemUI modifications. Link has been added to AicpExtras for easier access.\nHere you can also add new tiles.</string>
     <string name="aicp_downloads_title">Downloads</string>
     <string name="aicp_gerrit_title">Gerrit</string>
     <string name="send_mail_intent">Send mail...</string>
     <string name="hidden_anim_activity_title">Yoga time!!!</string>
     <string name="hidden_anim_more_title">MORE?</string>
     <string name="hidden_anim_more_nice">NICE</string>
+    <string name="continue_title">Continue</string>
 
     <string name="nothing_title">Nothing to see here yet, move along</string>
 
