AE: Add SuShell:
PS1: Superuser command auth has been granted

     I highly discourage using SuperSU, because it is closed
     source and there can be potentially hidden backdoor

     As simple as running
     public static boolean shutdown() {
         List<String> output = SuShell.runWithSu("reboot");
         return true;
     }

Change-Id: I464e81bced61af8a7adcb77ef069240874ea9b40

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -463,4 +463,7 @@
     <string name="reset_paranoid">AICP</string>
     <string name="reset_android">Android</string>
 
+    <!-- SU -->
+    <string name="cannot_get_su">Cannot get superuser access, exiting.</string>
+
 </resources>
