--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -467,4 +467,8 @@
     <string name="reset_paranoid">AICP</string>
     <string name="reset_android">Android</string>
 
+    <!-- Task Manager -->
+    <string name="enable_task_manager_title">Task Manager</string>
+    <string name="enable_task_manager_summary">Enable/Disable action for the task manager button in the expanded statusbar area</string>
+
 </resources>
