Aicp Logcat - WIP
Change-Id: I3f6241e9c4142272f86804b2b0796f8e9de1a7ec

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -483,4 +483,10 @@
     <string name="sizer_message_noselect">Nothing selected.</string>
     <string name="system_app_remover">System App Remover</string>
 
+    <!-- Aicp logcat -->
+    <string name="logcat_title">Logcat</string>
+    <string name="logcat_summary">Be patient after clicking, logcat needs to be created</string>
+    <string name="logcat_warning">Logcat - making it easy!</string>
+    <string name="make_logcat">Share logcat</string>
+
 </resources>
