--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -460,7 +460,6 @@
     <string name="reset_paranoid">AICP</string>
     <string name="reset_android">Android</string>
 
-<<<<<<< HEAD
     <!-- Task Manager -->
     <string name="enable_task_manager_title">Task Manager</string>
     <string name="enable_task_manager_summary">Enable/Disable action for the task manager button in the expanded statusbar area</string>
@@ -491,5 +490,11 @@
 
     <!-- SU -->
     <string name="cannot_get_su">Cannot get superuser access, exiting.</string>
+
+    <!-- Aicp logcat -->
+    <string name="logcat_title">Logcat</string>
+    <string name="logcat_warning">Making it easy!</string>
+    <string name="make_logcat">Share logcat</string>
+    <string name="logcat_share_subject">Aicp logcat</string>
 
 </resources>
