--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -483,4 +483,11 @@
     <string name="sizer_message_noselect">Nothing selected.</string>
     <string name="system_app_remover">System App Remover</string>
 
+    <!-- Aicp logcat -->
+    <string name="logcat_title">Logcat</string>
+    <string name="logcat_summary">Be patient after clicking, logcat needs to be created</string>
+    <string name="logcat_warning">Making it easy!</string>
+    <string name="make_logcat">Share logcat</string>
+    <string name="logcat_share_subject">Aicp logcat</string>
+
 </resources>
