AE: Add three-fingers-swipe to screenshot [2/2]
Change-Id: Ie9a6556a0e1065609d0b2bc67dd57c976efd440c

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -582,4 +582,7 @@
     <string name="bluetooth_battery_title">Show Bluetooth battery status</string>
     <string name="bluetooth_battery_summary">Show battery status for the currently connected bluetooth device, if availible.</string>
 
+    <!-- Three-fingers-swipe to screenshot -->
+    <string name="three_finger_gesture_title">Three finger gesture</string>
+    <string name="three_finger_gesture_summary">Swipe three finger to screenshot</string>
 </resources>
