--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -496,5 +496,5 @@
     <string name="logcat_warning">Making it easy!</string>
     <string name="make_logcat">Share logcat</string>
     <string name="logcat_share_subject">Aicp logcat</string>
-
+    <string name="generating_log_wait">Log its been generated, please wait</string>
 </resources>
