Expand Aicp logcat - WIP
Add kmesg and dmesg to the play

TODO:
- Clear all checkboxes on opening activity
- Append new lines of text correctly to sharedIntent

PS2:
- Dialog title string edit

Change-Id: I3b27a4bf0f85b7c7f4257688c0fffd8f8ef177b0

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -492,9 +492,14 @@
     <string name="cannot_get_su">Cannot get superuser access, exiting.</string>
 
     <!-- Aicp logcat -->
-    <string name="logcat_title">Logcat</string>
-    <string name="logcat_warning">Making it easy!</string>
-    <string name="make_logcat">Share logcat</string>
-    <string name="logcat_share_subject">Aicp logcat</string>
+    <string name="log_it_title">Log it</string>
+    <string name="kmesg_title">Kmesg</string>
+    <string name="dmesg_title">Dmesg</string>
+    <string name="log_it_title">Engage</string>
+    <string name="log_that_shit_title">Log that shit</string>
+    <string name="logcat_warning">Share it or GTFO!</string>
+    <string name="share_title">Share...</string>
+    <string name="log_it_share_subject">Aicp logs</string>
+    <string name="generating_log_wait">Log is being generated, please wait</string>
 
 </resources>
