--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -493,8 +493,14 @@
 
     <!-- Aicp logcat -->
     <string name="logcat_title">Logcat</string>
-    <string name="logcat_warning">Making it easy!</string>
-    <string name="make_logcat">Share logcat</string>
-    <string name="logcat_share_subject">Aicp logcat</string>
+    <string name="kmesg_title">Kmesg</string>
+    <string name="dmesg_title">Dmesg</string>
+    <string name="log_it_title">Engage</string>
+    <string name="log_it_dialog_title">Engage</string>
+    <string name="log_that_shit_title">Log that shit</string>
+    <string name="logcat_warning">Share it or GTFO!</string>
+    <string name="share_title">Share...</string>
+    <string name="log_it_share_subject">Aicp logs</string>
+    <string name="log_it_summary">Be patient for the logs to be created</string>
 
 </resources>
