Powermenu screenshot delay [2/2]
Brought up from MM for AICP

Change-Id: I10d450f3c6093b1f230dbbab9e4ccf6132625d66
Signed-off-by: Ali B <abittin@gmail.com>

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -438,6 +438,10 @@
     <string name="screenshot_type_fullscreen">Take fullscreen screenshots</string>
     <string name="screenshot_type_partial">Drag selection on the area you want to take as a screenshot</string>
 
+    <!-- Screenshot delay -->
+    <string name="powermenu_screenshot_delay_title">Screenshot delay</string>
+    <string name="powermenu_screenshot_delay_message">Delay currently set to %1$s seconds</string>
+
     <!-- Lock screen Am/Pm switch -->
     <string name="lock_screen_hide_ampm_title">Hide AM/PM</string>
     <string name="lock_screen_hide_ampm_summary_on">AM/PM hidden</string>
