--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -438,6 +438,9 @@
     <string name="screenshot_type_fullscreen">Take fullscreen screenshots</string>
     <string name="screenshot_type_partial">Drag selection on the area you want to take as a screenshot</string>
 
+    <!-- Screenshot delay -->
+    <string name="powermenu_screenshot_delay_title">Set screenshot delay</string>
+
     <!-- Lock screen Am/Pm switch -->
     <string name="lock_screen_hide_ampm_title">Hide AM/PM</string>
     <string name="lock_screen_hide_ampm_summary_on">AM/PM hidden</string>
