AE: Battery saver & low battery notification toggles [2/2]
Change-Id: Ibf1a0ec54372da6fae5829e47796fd29cd05eb51

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -551,4 +551,10 @@
     <string name="power_menu_animation_bottom">Bottom</string>
     <string name="power_menu_animation_top">Top</string>
 
+    <!-- Statusbar fragment -->
+    <string name="battery_saver_notif_title">Battery saver notification</string>
+    <string name="battery_saver_notif_summary">Show battery saver notification when enabled</string>
+    <string name="battery_low_notif_title">Low battery notification</string>
+    <string name="battery_low_notif_summary">Show low battery notification when enabled</string>
+
 </resources>
