AICP Logo on Status Bar (2/2)
PS2: Code fixup
PS3: fix layout

Change-Id: Ia6309c8039cc3484b0220527d741cf26c6c4fa9e

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -551,4 +551,9 @@
     <string name="power_menu_animation_bottom">Bottom</string>
     <string name="power_menu_animation_top">Top</string>
 
+    <!-- Statusbar AICP logo -->
+    <string name="status_bar_aicp_logo_title">AICP logo</string>
+    <string name="status_bar_aicp_logo_summary">Enable to show AICP logo on the left side of statusbar</string>
+    <string name="status_bar_aicp_logo_color">AICP logo color</string>
+
 </resources>
