AE: Make Posible  to change DNS WIP
Change-Id: Idcfa2e95e2daf1b5c5f2f221e74549ea2f36ae32

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -551,4 +551,23 @@
     <string name="power_menu_animation_bottom">Bottom</string>
     <string name="power_menu_animation_top">Top</string>
 
+    <!-- DNS CHANGER -->
+    <string name="dns_changer">DNSChanger</string>
+    <string name="action_about">About</string>
+    <string name="title_activity_about">About</string>
+    <string name="pref_title_version">Version</string>
+    <string name="pref_title_source_code">Source code</string>
+    <string name="pref_title_developers_website">Developer\'s website</string>
+    <string name="pref_title_license">License</string>
+    <string name="dns1">DNS1</string>
+    <string name="dns2">DNS2</string>
+    <string name="dns_apply">APPLY</string>
+    <string name="dns_config">CONFIG</string>
+    <string name="firstrun_dialog_message">DNSChanger lets you change your DNS servers. This is temporary and it will not resist if your
+        IP address changes or if you restart your Phone.\n
+	\nThe app is currently using the \"setprop\" method. This might not work for you. If so,
+	please let me know so I can try adding other methods.\n
+    </string>
+    <string name="firstrun_dialog_ok">OK</string>
+
 </resources>
