Update DE Translations to 151230
Added "AICP logo" translation.

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -557,4 +557,9 @@
     <string name="power_menu_animation_bottom">Unten</string>
     <string name="power_menu_animation_top">Oben</string>
 
+    <!-- Statusbar AICP logo -->
+    <string name="status_bar_aicp_logo_title">AICP Logo</string>
+    <string name="status_bar_aicp_logo_summary">Aktivieren, um das AICP Logo auf der linken Seite der Statusleiste anzuzeigen</string>
+    <string name="status_bar_aicp_logo_color">Farbe des AICP Logos</string>
+    
 </resources>
