Add PreferenceCategory for Aicp logo
Change-Id: I08184bac3480168c58f2b92c1c014ce5bd412498

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -547,6 +547,7 @@
     <string name="power_menu_animation_rotate">Rotation</string>
 
     <!-- Statusbar AICP logo -->
+    <string name="status_bar_logo_category_title">Statusbar logo</string>
     <string name="status_bar_aicp_logo_title">AICP logo</string>
     <string name="status_bar_aicp_logo_summary">Enable to show AICP logo on the left side of statusbar</string>
     <string name="status_bar_aicp_logo_color">AICP logo color</string>
