Add membar to recents options [2/2]
AICPfy
CheckBox -> Switch

Change-Id: I68c7252fd542be4b681eb1c54e25be978b03db09

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -650,4 +650,8 @@
     <string name="recent_panel_lefty_mode_title">Show on the left edge</string>
     <string name="recent_panel_lefty_mode_summary">Show recent apps panel on the left edge</string>
 
+    <!-- Membar recents -->
+    <string name="recents_show_membar_title">Memory bar</string>
+    <string name="recents_show_membar_summary">Show a bar with the device\'s available memory</string>
+
 </resources>
