AE: Notification ticker (2/2)
Change-Id: Id9418803dd5136f5c928914e637d49b15b983bcb

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -654,4 +654,8 @@
     <string name="recents_show_membar_title">Memory bar</string>
     <string name="recents_show_membar_summary">Show a bar with the device\'s available memory</string>
 
+    <!-- Status bar ticker -->
+    <string name="status_bar_ticker_title">Notification Ticker</string>
+    <string name="status_bar_ticker_summary">Scroll notification text in the statusbar.</string>
+
 </resources>
